Fixed alignment issues in Footer Image of Homepage

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -69,10 +69,10 @@ header{
 }
 
 .bottom-graph-container{
-	padding: 0; margin: 0;
+	padding: 0 !important; margin: 0 !important; margin-bottom: -26px !important;
 }
 .bottom-graph-container img{
-	width: 100%;padding: 0; margin: 0; left: 0; 
+	width: 100%;padding: 0 !important; margin: 0 !important; left: 0; 
 }
 /*Content of the home screen ends here*/
 
